# shopping-list

./: pyproject.toml
app/: main.py
app/api/v1/: shopping.py
app/core/: config.py
app/db/: __init__.py  tables.py
app/models/: core.py  response.py
app/services/: __init__.py  core.py
